# Synthetic-Data

./: .gitignore  Dockerfile  README-dev.md  README.md  pyproject.toml
Generator/: app.py  config.py  dataGenModel.py  test_app_batch.py
Generator/models/: README.md
Generator/static/: events_vocab.json
SAM-GK-SYSTEM/: requirements.txt
SAM-GK-SYSTEM/Evaluation/: README.md  config.py  evaluateData.py  transferEvaluationsToMiddleware.py
SAM-GK-SYSTEM/Evaluation/files_for_evaluation/: README.md
SAM-GK-SYSTEM/Evaluation/static/: README.md
SAM-GK-SYSTEM/Generator/: README.md  dataGenModel.py  test_app.py  transferResultsToMiddleware.py
SAM-GK-SYSTEM/Generator/models/: README.md
SAM-GK-SYSTEM/Generator/static/: timings_vocab.json
SAM-GK-SYSTEM/Middleware/: README.md  config.py  postProcessEvaluated.py  processGeneratorFiles.py  transferResultsToEvaluation.py
SAM-GK-SYSTEM/Middleware/generator_files/: README.md
SAM-GK-SYSTEM/Middleware/static/: codings.csv
scripts/: create_docker_image  generate
synthetic_data/: app.py  globals.py
synthetic_data/Samsung-Gatekeeper/: 1 - preprocess_helper.py  create_schema_helper.py  schema.json
synthetic_data/Training-Notebooks/: Train_Observations_Version_2.ipynb
synthetic_data/evaluator/: evaluate.py  evaluator.py
synthetic_data/generator/: generator.py  model.py
synthetic_data/generator2/: generator.py
synthetic_data/shared/: postprocess.py  process.py  shared.py
tests/: evaluator_test.py  generator2_test.py  generator_test.py  test_evaluator.py  test_generator.py  transformer_test.py
(+10 files in other folders)
